# snapshotter-periphery-txprocessor

./: .env.example  .gitignore  Dockerfile  README.md  digest.txt  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: docker-ecr.yml
config/: loader.py  preloaders.json  settings.template.json
scipts/: generate_settings_template.py
scripts/: entrypoint.py  generate_settings_template.py
utils/: logging.py  redis_conn.py  rpc.py  tx_processor.py
utils/code_detectors/: __init__.py  uniswapv3_detector.py
utils/models/: data_models.py  settings_model.py
utils/preloaders/: __init__.py  base.py  event_filter.py  manager.py  receipt_dumper.py
utils/redis/: data_manager.py  redis_conn.py  redis_keys.py
