[tool.poetry]
name = "txprocessor"
version = "0.1.0"
description = "Processes transactions for events etc as needed by preloaders and computes"
authors = ["anomit <anomit@powerloom.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = {extras = ["hiredis"], version = "^5.0.1"}
loguru = "^0.7.2"
httpx = "^0.27.0"
web3 = "^6.11.1"
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
