[tool.poetry]
name = "txprocessor"
version = "0.1.0"
description = "Processes transactions for events etc as needed by preloaders and computes"
authors = ["anomit <anomit@powerloom.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
redis = {extras = ["hiredis"], version = "^5.0.1"}
loguru = "^0.7.3"
httpx = "^0.27.1"
web3 = "^6.17.1"
pydantic = "^2.11.3"
python-dotenv = "^1.0.0"
rpc_helper = { git = "https://github.com/PowerLoom/rpc-helper.git"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
